@startuml

class Recipe {
    - name: String
    - description: String
    - imageUrl: String
    - preparationTime: String
    - difficulty: DifficultyType
}

class Tag {
    - label: String
}

class Section {
    - title: String
}

class Step {
    - stepNumber: Integer
    - label: String
    - instructions: String
}

class Ingredient {
    - amount: Double
    - displayName: String
}

class Seasoning {
    - name: String
    - amount: Double
    - unit: UnitType
    - label: String
}

class Food {
    - name: String
    - foodOrigin: FoodOriginType
    - nutritionalFunctions: List<NutritionalFunctionType>
}

class NutritionalInfo {
    - energy: Double
    - carbohydrates: Double
    - sugars: Double
    - proteins: Double
    - totalFats: Double
    - saturatedFats: Double
    - fiber: Double
}

class MicronutrientContent {
    - amountPerGram: Double
}

class Micronutrient {
    - name: String
    - rda: Double
        ' recommendedDietaryAllowance
    - unit: UnitType
}

class MeasurementUnit {
    - unit: UnitType
    - gramsPerUnit: Double
}



Recipe "1" *-r- "1...*" Section : sections
Recipe "1" *-l- "0...*" Tag : tags

Section "1" *-r- "1...*" Step : steps
Section "1" *-d- "1...*" Ingredient : Ingredients
Section "1" *-r- "0...*" Seasoning : seasonings

Ingredient "1" *-- "1" Food : food
Ingredient "1" o-r- "1" MeasurementUnit : unit

MicronutrientContent "1" *-- "1" Micronutrient : micronutrients

Food "1" *-- "1" NutritionalInfo : nutritionalInfo
Food "1" *-u- "1...*" MeasurementUnit : supportedUnits
Food "1" *-r- "0...*" MicronutrientContent : micronutrients
Food "1" *-l- "0...*" Tag : tags
Step -[hidden]- Seasoning

UnitType -[hidden]d- FoodOriginType
FoodOriginType -[hidden]- NutritionalFunctionType
NutritionalFunctionType -[hidden]- DifficultyType





enum UnitType {
    GRAMS
    MILLIGRAMS
    KILOGRAMS
    MICROGRAMS
    MILLILITERS
    UNIT
    TABLESPOON
    TEASPOON
    PERCENTAGE
    AS_NEEDED
    TO_TASTE
    SLICE
    PIECE
    PINCH
    HANDFUL
    DASH
    DROP
}

enum FoodOriginType {
    GRAIN
    VEGETABLE
    FRUIT
    DAIRY
    PROTEIN
}

enum NutritionalFunctionType {
    ENERGY_FOOD
    REGULATORY_FOOD
    BUILDER_FOOD
}

enum DifficultyType {
    EASY
    INTERMEDIATE
    HARD
}

@enduml
